--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
+    "util": "^0.12.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +47,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
+    "babel-jest": "^29.7.0",
     "webpack-bundle-analyzer": "^4.10.2"
   }
 }
