--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
-    "sass": "^1.77.8",
+    "sass": "^1.79.1",
     "util": "^0.12.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
@@ -55,6 +55,8 @@
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "jest": {
-  "transformIgnorePatterns": ["/node_modules/(?!(axios|react-icons|uuid)/)"]
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios|react-icons|uuid)/)"
+    ]
   }
 }
